create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5,12 +5,12 @@ body {
   font-family: Jost;
 }
 .display-1 {
-  font-family: 'Jost', sans-serif;
-  font-size: 4.6rem;
+  font-family: 'Pacifico', handwriting;
+  font-size: 1.6rem;
   line-height: 1.1;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 5.75rem;
+  font-size: 2rem;
 }
 .display-2 {
   font-family: 'Kaushan Script', handwriting;
@@ -51,14 +51,14 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 992px) {
   .display-1 {
-    font-size: 3.68rem;
+    font-size: 1.28rem;
   }
 }
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 3.22rem;
-    font-size: calc( 2.26rem + (4.6 - 2.26) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.1 * (2.26rem + (4.6 - 2.26) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.12rem;
+    font-size: calc( 1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.1 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
     font-size: 2.4rem;
@@ -1122,7 +1122,7 @@ a {
 .cid-sHHEutXk4s {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #232323;
+  background-color: #542e2e;
 }
 .cid-sHHEutXk4s .row-links {
   width: 100%;
@@ -1637,8 +1637,8 @@ a {
   align-items: center;
 }
 .cid-sHHEutXk4s {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #542e2e;
 }
 .cid-sHHEutXk4s .row-links {
@@ -2067,7 +2067,7 @@ a {
 .cid-sHHEutXk4s {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #232323;
+  background-color: #542e2e;
 }
 .cid-sHHEutXk4s .row-links {
   width: 100%;
@@ -2132,144 +2132,6 @@ a {
 }
 .cid-sHHEutXk4s .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-sHrtbkBFBr {
-  padding-top: 4rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-sHrtbkBFBr .card-box {
-  padding: 2rem;
-  width: 58.33%;
-}
-.cid-sHrtbkBFBr .img-wrapper {
-  width: 41.66%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cid-sHrtbkBFBr .img1 {
-  background: #ffe161;
-}
-.cid-sHrtbkBFBr .img2 {
-  background: #6592e6;
-}
-.cid-sHrtbkBFBr .mbr-iconfont {
-  display: block;
-  font-size: 8rem;
-  color: #ffffff;
-  margin-bottom: 2rem;
-}
-.cid-sHrtbkBFBr .card {
-  margin: auto;
-  min-height: 280px;
-  transition: all 0.3s;
-}
-.cid-sHrtbkBFBr .card-wrapper {
-  background: #fafafa;
-  border-radius: 4px;
-  display: flex;
-  overflow: hidden;
-  justify-content: space-between;
-}
-@media (max-width: 992px) {
-  .cid-sHrtbkBFBr .card-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sHrtbkBFBr .card-wrapper {
-    flex-direction: column;
-  }
-  .cid-sHrtbkBFBr .card-box {
-    padding: 1rem;
-  }
-  .cid-sHrtbkBFBr .card-box,
-  .cid-sHrtbkBFBr .img-wrapper {
-    width: 100%;
-  }
-  .cid-sHrtbkBFBr .img-wrapper {
-    padding: 4rem 1rem;
-  }
-  .cid-sHrtbkBFBr .mbr-flex {
-    flex-direction: column-reverse;
-  }
-}
-.cid-sHrtbkBFBr .card-subtitle {
-  color: #0077ff;
-}
-.cid-sHrtbkBFBr .mbr-text,
-.cid-sHrtbkBFBr .link-wrap {
-  color: #555555;
-}
-.cid-sHrx6O3LsO {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
-}
-.cid-sHrx6O3LsO .card-box {
-  padding: 2rem;
-  width: 58.33%;
-}
-.cid-sHrx6O3LsO .img-wrapper {
-  width: 41.66%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cid-sHrx6O3LsO .img1 {
-  background: #ffe161;
-}
-.cid-sHrx6O3LsO .img2 {
-  background: #6592e6;
-}
-.cid-sHrx6O3LsO .mbr-iconfont {
-  display: block;
-  font-size: 8rem;
-  color: #ffffff;
-  margin-bottom: 2rem;
-}
-.cid-sHrx6O3LsO .card {
-  margin: auto;
-  min-height: 280px;
-  transition: all 0.3s;
-}
-.cid-sHrx6O3LsO .card-wrapper {
-  background: #fafafa;
-  border-radius: 4px;
-  display: flex;
-  overflow: hidden;
-  justify-content: space-between;
-}
-@media (max-width: 992px) {
-  .cid-sHrx6O3LsO .card-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sHrx6O3LsO .card-wrapper {
-    flex-direction: column;
-  }
-  .cid-sHrx6O3LsO .card-box {
-    padding: 1rem;
-  }
-  .cid-sHrx6O3LsO .card-box,
-  .cid-sHrx6O3LsO .img-wrapper {
-    width: 100%;
-  }
-  .cid-sHrx6O3LsO .img-wrapper {
-    padding: 4rem 1rem;
-  }
-  .cid-sHrx6O3LsO .mbr-flex {
-    flex-direction: column-reverse;
-  }
-}
-.cid-sHrx6O3LsO .card-subtitle {
-  color: #0077ff;
-}
-.cid-sHrx6O3LsO .mbr-text,
-.cid-sHrx6O3LsO .link-wrap {
-  color: #555555;
 }
 .cid-sHrrRrfBPY {
   z-index: 1000;
@@ -2613,10 +2475,46 @@ a {
     left: -1rem;
   }
 }
+.cid-sHIlpxsfwd {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #f7d69a;
+}
+.cid-sHIlpxsfwd .line {
+  background-color: #542e2e;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-sHIlpxsfwd .mbr-text {
+  color: #232323;
+}
+.cid-sHIhEcJdfa {
+  padding-top: 9rem;
+  padding-bottom: 5rem;
+  background-image: url("../../../assets/images/textura-papel-viejo-fondo-papel-vintage-vista-superior-88281-4010-626x417.jpg");
+}
+.cid-sHIhEcJdfa .mbr-iconfont {
+  display: block;
+  font-size: 4rem;
+  color: #542e2e;
+  margin-bottom: 2rem;
+}
+.cid-sHIhEcJdfa .card-wrapper {
+  min-height: 220px;
+  transition: all 0.3s;
+  border-radius: 4px;
+  padding: 1rem;
+  background: #fff0b0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+}
 .cid-sHHEutXk4s {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #232323;
+  background-color: #542e2e;
 }
 .cid-sHHEutXk4s .row-links {
   width: 100%;
