--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -815,6 +815,8 @@ a {
 .cid-s48OLK6784 {
   z-index: 1000;
   width: 100%;
+  position: relative;
+  min-height: 60px;
 }
 .cid-s48OLK6784 nav.navbar {
   position: fixed;
@@ -907,7 +909,7 @@ a {
   min-height: 77px;
   transition: all .3s;
   border-bottom: 1px solid transparent;
-  background: rgba(255, 254, 251, 0.2);
+  background: #fffefb;
 }
 .cid-s48OLK6784 .navbar:not(.navbar-short) {
   border-bottom: 1px solid #e6e6e6;
@@ -1224,6 +1226,8 @@ a {
 .cid-sHroEe1NsX {
   z-index: 1000;
   width: 100%;
+  position: relative;
+  min-height: 60px;
 }
 .cid-sHroEe1NsX nav.navbar {
   position: fixed;
@@ -1316,7 +1320,7 @@ a {
   min-height: 77px;
   transition: all .3s;
   border-bottom: 1px solid transparent;
-  background: rgba(255, 254, 251, 0.2);
+  background: #fffefb;
 }
 .cid-sHroEe1NsX .navbar:not(.navbar-short) {
   border-bottom: 1px solid #e6e6e6;
@@ -1814,6 +1818,8 @@ a {
 .cid-sHrtVVkClW {
   z-index: 1000;
   width: 100%;
+  position: relative;
+  min-height: 60px;
 }
 .cid-sHrtVVkClW nav.navbar {
   position: fixed;
@@ -1906,7 +1912,7 @@ a {
   min-height: 77px;
   transition: all .3s;
   border-bottom: 1px solid transparent;
-  background: rgba(255, 254, 251, 0.2);
+  background: #fffefb;
 }
 .cid-sHrtVVkClW .navbar:not(.navbar-short) {
   border-bottom: 1px solid #e6e6e6;
